# PantryPilotAI

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt
src/: data_loader.py  embeddings.py  llm.py  text_splitter.py  vector_store.py
