[project]
name = "pantrypilot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.14.0",
    "faiss-cpu>=1.14.3",
    "huggingface-hub>=1.23.0",
    "langchain>=1.3.13",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.9",
    "langchain-huggingface>=1.2.2",
    "langchain-ollama>=1.1.0",
    "numpy>=2.5.1",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.6.0",
    "streamlit>=1.59.1",
    "torch>=2.13.0",
    "tqdm>=4.68.4",
    "transformers>=5.13.1",
]
